[project]
name = "mmt"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mmt-core",
    "mmt-agents[pixiv, ntfy, tg, zodgame]",
    "mmt-apps[rand-img, pixiv-archive, postgre]",
    "mmt-tools[monitor, http_adapter]",
    "mmt-rss",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "tzdata>=2025.2",
]

[tool.uv.sources]
mmt-core = { workspace = true }
mmt-agents = { workspace = true }
mmt-apps = { workspace = true }
mmt-tools = { workspace = true }
mmt-rss = { workspace = true }

[tool.uv.workspace]
members = [
    "agents",
    "core",
    "apps",
    "tools",
    "rss",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps", "core", "agents", "tools"]
exclude = ["assets*", "config*"]
