[project]
name = "mmt-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hyker", email = "hykerguro@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "redis>=6.4.0",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
