[project]
name = "mmt-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hyker", email = "hykerguro@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "redis>=6.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["confctl", "litter"]